infrastructure/configurations/production/directory/ingressroute.yaml

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: lldap-ui
  namespace: controller-directory
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`directory.internal.infra01.alter-it.eu`)
      kind: Rule
      middlewares:
        - name: tailnet-only
          namespace: controller-ingress
      services:
        - name: lldap
          port: 17170
  tls:
    secretName: directory-internal-infra01-alter-it-tls
